--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  overflow-y: scroll; /* Adicionado para adicionar barra de rolagem vertical */
 }
 
 /* Estilos da seção de cabeçalho */
@@ -109,28 +110,28 @@ footer {
   }
 
   .logo {
-    max-width: 350px;
+    max-width: 400px;
   }
 
   .headline {
-    font-size: 22px;
-    margin-left: 2px;
-    margin-right: 2px;
+    font-size: 16px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .action-button {
-    padding: 25px 30px;
-    font-size: 18px;
-    margin: 50px auto;
+    padding: 20px 25px;
+    font-size: 16px;
+    margin: 40px auto;
   }
 
   #video-container iframe {
     width: 100%;
-    height: 500px;
+    height: 450px;
   }
 
   footer {
-    font-size: 14px;
-    padding: 30px;
+    font-size: 11px;
+    padding: 20px;
   }
 }
