--- a/styles.css
+++ b/styles.css
@@ -111,27 +111,32 @@ footer {
 
   .logo {
     max-width: 400px;
+    transform: scale(2); /* Aumenta em 100% */
   }
 
   .headline {
-    font-size: 16px;
-    margin-left: 10px;
-    margin-right: 10px;
+    font-size: 32px;
+    margin-left: 20px;
+    margin-right: 20px;
+    transform: scale(2); /* Aumenta em 100% */
   }
 
   .action-button {
-    padding: 20px 25px;
-    font-size: 16px;
-    margin: 40px auto;
+    padding: 40px 50px;
+    font-size: 32px;
+    margin: 80px auto;
+    transform: scale(2); /* Aumenta em 100% */
   }
 
   #video-container iframe {
-    width: 100%;
-    height: 450px;
+    width: 1600px;
+    height: 900px;
+    transform: scale(2); /* Aumenta em 100% */
   }
 
   footer {
-    font-size: 11px;
-    padding: 20px;
+    font-size: 22px;
+    padding: 40px;
+    transform: scale(2); /* Aumenta em 100% */
   }
 }
