--- a/styles.css
+++ b/styles.css
@@ -110,31 +110,33 @@ footer {
   }
 
   .logo {
-    max-width: 800px;
+    max-width: 400px;
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .headline {
-    font-size: 32px;
+    font-size: 24px;
     margin-left: 20px;
     margin-right: 20px;
   }
 
   .action-button {
-    padding: 40px 50px;
-    font-size: 32px;
-    margin: 80px auto;
+    padding: 30px 35px;
+    font-size: 14px;
+    margin: 30px auto;
   }
 
   #video-container iframe {
     width: 100%;
     height: auto;
-    max-width: 1600px;
-    max-height: 900px;
+    max-width: 800px;
+    max-height: 450px;
   }
 
   footer {
-    font-size: 100px;
-    padding: 200px;
+    font-size: 10px;
+    padding: 10px;
   }
 }
