--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ footer {
   }
 
   .logo {
-    max-width: 150px;
+    max-width: 50%;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
