--- a/styles.css
+++ b/styles.css
@@ -118,26 +118,26 @@ footer {
 
   .headline {
     font-size: 22px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 4%;
+    margin-right: 4%;
     text-align: center;
   }
 
   .action-button {
-    padding: 10px 10px;
+    padding: 4% 4%;
     font-size: 16px;
-    margin: 30px auto;
+    margin: 6% auto;
   }
 
   #video-container iframe {
     width: 100%;
     height: auto;
-    max-width: 800px;
+    max-width: 80%;
     max-height: 450px;
   }
 
   footer {
     font-size: 10px;
-    padding: 10px;
+    padding: 2%;
   }
 }
