--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ footer {
 /* Estilos para dispositivos móveis */
 @media screen and (max-width: 480px) {
   body {
-    background-image: url('assets/img/capa.png');
+    background-image: url('assets/img/capa-responsivo.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
