--- a/styles.css
+++ b/styles.css
@@ -87,18 +87,6 @@ body {
   height: 225px;
 }
 
-/* Estilos do rodapé */
-footer {
-  background-color: #1a1a1a;
-  padding: 20px;
-  text-align: center;
-  font-size: 11px;
-  font-weight: bold;
-  font-family: "Galano Classic", sans-serif;
-  color: #ffffff;
-  margin-top: 20px;
-}
-
 /* Estilos para dispositivos móveis */
 @media screen and (max-width: 480px) {
   body {
@@ -147,4 +135,24 @@ footer {
     font-size: 10px;
     padding: 2%;
   }
+}
+
+/* Estilos para desktop */
+@media screen and (min-width: 768px) {
+  #video-container iframe {
+    width: 800px; /* Ajuste a largura conforme necessário */
+    height: 450px; /* Ajuste a altura conforme necessário */
+  }
+}
+
+/* Estilos do rodapé */
+footer {
+  background-color: #1a1a1a;
+  padding: 20px;
+  text-align: center;
+  font-size: 11px;
+  font-weight: bold;
+  font-family: "Galano Classic", sans-serif;
+  color: #ffffff;
+  margin-top: 20px;
 }
