--- a/styles.css
+++ b/styles.css
@@ -77,14 +77,18 @@ body {
 
 /* Estilos do vídeo */
 #video-container {
-  text-align: center;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  position: relative;
+  width: 70%; /* Ajuste a largura conforme necessário */
+  margin: 0 auto;
+  padding-top: 39.375%; /* Proporção de aspecto de 16:9 (9 dividido por 16 multiplicado por 100) */
 }
 
 #video-container iframe {
-  width: 400px;
-  height: 225px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* Estilos do rodapé */
