--- a/styles.css
+++ b/styles.css
@@ -136,11 +136,14 @@ footer {
     width: 80%;
   }
 
+   #video-container {
+    width: 90%;
+    padding-top: 56.25%; /* Proporção de aspecto de 16:9 para dispositivos móveis */
+  }
+
   #video-container iframe {
-    width: 100%;
-    height: auto; /* Ajuste a altura conforme necessário */
-    max-width: 100%;
-    max-height: none; /* Remova a restrição de altura máxima */
+    /* ...outros estilos... */
+    height: 100%; /* Ajuste a altura para preencher o contêiner */
   }
   
   .terms-links a {
