--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-color: black;
+  background-color: #FFDFE8; /* Nova cor de fundo */
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -19,10 +19,11 @@ body {
 }
 
 .logo {
-  max-width: 400px;
-  height: auto;
+  max-width: 20%;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   display: block;
-  margin: 0 auto;
 }
 
 @font-face {
@@ -38,6 +39,7 @@ body {
   margin-left: 10px;
   margin-right: 10px;
   text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.863);
 }
 
 /* Estilos do botão de ação */
@@ -65,10 +67,11 @@ body {
 }
 
 .terms-links a {
-  color: white;
+  color: rgb(255, 255, 255);
   margin-right: 10px;
   text-decoration: underline;
   font-family: "Galano Classic", sans-serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.863);
 }
 
 .terms-links a:last-child {
@@ -93,7 +96,7 @@ body {
 
 /* Estilos do rodapé */
 footer {
-  background-color: #1a1a1a;
+  background-color: #AB9BA0;
   padding: 20px;
   text-align: center;
   font-size: 11px;
@@ -101,6 +104,7 @@ footer {
   font-family: "Galano Classic", sans-serif;
   color: #ffffff;
   margin-top: 20px;
+  
 }
 
 /* Estilos para dispositivos móveis */
@@ -110,7 +114,7 @@ footer {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    background-color: black;
+    background-color: #FFDFE8; /* Nova cor de fundo para dispositivos móveis */
   }
 
   .logo {
