--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,10 @@ body {
 }
 
 .logo {
-  max-width: 20%;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 400px;
+  height: auto;
   display: block;
+  margin: 0 auto;
 }
 
 @font-face {
@@ -38,7 +37,7 @@ body {
   margin-left: 10px;
   margin-right: 10px;
   text-align: center;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.863);
+  text-shadow: 2px 2px 4px #99868B;
 }
 
 /* Estilos do botão de ação */
@@ -70,7 +69,7 @@ body {
   margin-right: 10px;
   text-decoration: underline;
   font-family: "Galano Classic", sans-serif;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.863);
+  text-shadow: 2px 2px 4px #99868B;
 }
 
 .terms-links a:last-child {
