--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-color: #FFDFE8; /* Nova cor de fundo */
+  background-color: #000932; /* Nova cor de fundo */
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -18,10 +18,11 @@ body {
 }
 
 .logo {
-  max-width: 400px;
-  height: auto;
+  max-width: 20%;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   display: block;
-  margin: 0 auto;
 }
 
 @font-face {
@@ -37,13 +38,12 @@ body {
   margin-left: 10px;
   margin-right: 10px;
   text-align: center;
-  text-shadow: 2px 2px 4px #99868B;
 }
 
 /* Estilos do botão de ação */
 .action-button {
-  background-color: #E5AC5F;
-  color: black;
+  background-color: #000932;
+  color: rgb(255, 255, 255);
   padding: 20px 25px;
   font-size: 16px;
   border: none;
@@ -94,7 +94,7 @@ body {
 
 /* Estilos do rodapé */
 footer {
-  background-color: #AB9BA0;
+  background-color: #FD546E;
   padding: 20px;
   text-align: center;
   font-size: 11px;
