--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ footer {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    background-color: #FFDFE8; /* Nova cor de fundo para dispositivos móveis */
+    background-color: #000932; /* Nova cor de fundo para dispositivos móveis */
   }
 
   .logo {
