--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,8 @@ body {
 
 /* Estilos do botão de ação */
 .action-button {
-  background-color: #000932;
-  color: rgb(255, 255, 255);
+  background-color: #FD546E;
+  color: #000932;
   padding: 20px 25px;
   font-size: 16px;
   border: none;
