--- a/styles.css
+++ b/styles.css
@@ -1,101 +1,30 @@
-/* Configurações de layout para dispositivos móveis */
-@media only screen and (max-width: 600px) {
-    body {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      margin: 0; /* Remover margens padrão */
-    }
-  
-    header {
-      background-color: #000000; /* Fundo preto */
-      padding: 20px;
-      text-align: center;
-      margin-bottom: 0; /* Remover espaçamento inferior */
-      background-image: url("assets/img/fundo-responsivo.svg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center center;
-    }
-  
-    /* CSS para a logo */
-    header img {
-      max-width: 50%;
-      height: auto;
-    }
-  
-    /* CSS para a headline e subheadline */
-    .headline {
-      font-size: 22px; /* Tamanho da fonte reduzido */
-      font-weight: bold;
-      color: #fff; /* Cor da fonte branca */
-      font-family: 'League Spartan', sans-serif;
-      margin-top: 0px; /* Espaçamento superior reduzido para 5 pixels */
-      text-align: center; /* Alinhamento centralizado */
-    }
-  
-    .subheadline {
-      font-size: 15px; /* Tamanho da fonte reduzido para 12 pixels */
-      color: #fff; /* Cor da fonte branca */
-      font-family: 'League Spartan', sans-serif;
-    }
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Seu Site</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
 
-    .highlighted-text {
-        background-color: #E5AC5F; /* Cor de marca-texto */
-        color: #000000; /* Cor do texto */
-        padding: 1px; /* Espaçamento interno */
-    }
-  
-    .video-container {
-      width: 100%;
-      padding-top: 56.25%; /* Proporção de 16:9 (9 dividido por 16, multiplicado por 100) */
-      position: relative;
-      margin-top: -20px; /* Espaçamento superior para separar o vídeo do botão */
-      margin-bottom: 0px;
-    }
-  
-    .video-container iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-  
-    .action-button {
-      display: inline-block;
-      padding: 30px 60px; /* Espaçamento do botão */
-      background-color: #E5AC5F; /* Cor de fundo do botão */
-      color: #000000; /* Cor do texto do botão */
-      text-decoration: none;
-      font-family: "League Spartan", sans-serif;
-      font-size: 15px;
-      font-weight: bold; /* Fonte em negrito */
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-      margin-top: 30px;
-    }
-  
-    .action-button:hover {
-      background-color: #EFEFEF; /* Cor de fundo do botão ao passar o mouse */
-    }
-  
-    .content {
-      text-align: center;
-      padding: 20px;
-    }
-  
-    .responsive-image {
-      width: 100%;
-      height: auto;
-      margin-top: 0px; /* Espaçamento superior */
-    }
-  
-    footer {
-      background-color: #f0f0f0;
-      padding: 20px;
-      text-align: center;
-      color: #888;
-      font-size: 12px;
-    }
-  }
+</head>
+<body>
+  <header>
+    <img src="assets/img/logo.svg" alt="Logo">
+    <h1 class="headline">CENTENAS DE PESSOAS QUE COMEÇARAM DO ABSOLUTO ZERO CONSEGUIRAM TRANSFORMAR SEU INSTAGRAM EM UMA <span style="color: #E5AC5F;">MÁQUINA DE FAZER DINHEIRO EM POUCOS DIAS COM UMA ÚNICA ESTRATÉGIA</span></h1>
+    <p class="subheadline"> <span style="color: #E5AC5F;">Assista o vídeo abaixo e descubra o segredo</span> que tem ajudado pessoas a alcançar + de 5 mil reais todos os meses com as redes sociais no mercado de Marketing de Influência <span class="highlighted-text">à partir de 500 seguidores</span></p>
+  <div class="content">
+    <div class="video-container">
+      <iframe src="https://scripts.converteai.net/f13659f9-694c-4fb4-83a7-b25bfadf2ed0/players/649d0fd1898cc800097ab1ba/embed.html" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <a href="https://www.google.com.br" target="_blank" class="action-button">GARANTA SUA VAGA AGORA</a>
+  </div>
+    </header>
+
+  <img src="assets/img/pt2-responsivo.svg" alt="Imagem Responsiva" class="responsive-image">
+
+  <footer>
+    Todos os direitos reservados &copy; 2023
+  </footer>
+</body>
+</html>
