--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,27 @@
     height: auto;
   }
 
+  .headline {
+    font-size: 22px;
+    font-weight: bold;
+    color: #fff;
+    font-family: 'League Spartan', sans-serif;
+    margin-top: 0px;
+    text-align: center;
+  }
+
+  .subheadline {
+    font-size: 15px;
+    color: #fff;
+    font-family: 'League Spartan', sans-serif;
+  }
+
+  .highlighted-text {
+    background-color: #E5AC5F;
+    color: #000000;
+    padding: 1px;
+  }
+
   .video-container {
     width: 100%;
     padding-top: 70%;
@@ -117,4 +138,3 @@
     font-size: 12px;
   }
 }
-
